{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 750,
  "lineage": "a2f32519-4313-1964-8e24-17fcd322ec8c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "tomcat_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:501768929654:loadbalancer/tomcat-elb",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tomcat-elb-813948489.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tomcat-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 8080,
                "lb_protocol": "http"
              }
            ],
            "name": "tomcat-elb",
            "security_groups": [
              "sg-097485623ba1c05c2"
            ],
            "source_security_group": "501768929654/elb",
            "source_security_group_id": "sg-097485623ba1c05c2",
            "subnets": [
              "subnet-062fd1fdbf54c315b",
              "subnet-0f7de74c5eae94545"
            ],
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07cba92e4c7392764",
            "owner_id": "501768929654",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0741c99ee5f9c111e",
            "owner_id": "501768929654",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cba92e4c7392764",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fe277d1ed90a05d",
            "route_table_id": "rtb-0741c99ee5f9c111e",
            "subnet_id": "subnet-062fd1fdbf54c315b"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085f066dcaac13839",
            "route_table_id": "rtb-0741c99ee5f9c111e",
            "subnet_id": "subnet-0f7de74c5eae94545"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-097485623ba1c05c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097485623ba1c05c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elb",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-0aae9a1ab467e8608",
            "description": "my-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aae9a1ab467e8608",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.205.175.56/32",
                  "45.127.44.46/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.205.175.56/32",
                  "45.127.44.46/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my-sg",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:security-group/sg-0f67b1165bd9a1a14",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f67b1165bd9a1a14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat-sg",
            "name_prefix": null,
            "owner_id": "501768929654",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-01b44e590c40b7793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-01b44e590c40b7793",
            "map_public_ip_on_launch": false,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-069ccb822abc3d4ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-069ccb822abc3d4ae",
            "map_public_ip_on_launch": false,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-062fd1fdbf54c315b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-062fd1fdbf54c315b",
            "map_public_ip_on_launch": true,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:subnet/subnet-0f7de74c5eae94545",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0f7de74c5eae94545",
            "map_public_ip_on_launch": true,
            "owner_id": "501768929654",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-027d42c818f8daa2a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:501768929654:vpc/vpc-027d42c818f8daa2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0f5a9920628d5c25d",
            "default_route_table_id": "rtb-03457720dc7743756",
            "default_security_group_id": "sg-0bea2f1f13b4b839f",
            "dhcp_options_id": "dopt-66b5c100",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-027d42c818f8daa2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03457720dc7743756",
            "owner_id": "501768929654",
            "tags": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}